--- a/alanlib_ita/ANNOTAZIONI_DOXTER.html
+++ b/alanlib_ita/ANNOTAZIONI_DOXTER.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revdate">2018-10-15</span>
+<span id="revdate">2018-10-25</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -598,40 +598,160 @@ I frammenti delle regioni hanno un sottopeso; durante la fase di collatura del d
 <td class="tableblock halign-left valign-top"><p class="tableblock">== Elenco dei Verbi Italiani</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-right valign-top"><p class="tableblock"><code>2000</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1010</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>tabella_verbi_partita</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">=== Tabella Comandi di Partita</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1020</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>tabella_verbi_gioco</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">=== Tabella Comandi di Gioco</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1030</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>tabella_verbi_domande</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">=== Tabella Comandi Domande</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10000</code></p></td>
 <td class="tableblock halign-right valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>comandi_partita</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">=== Meta Comandi di Partita</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">== Meta Verbi di Partita</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-right valign-top"><p class="tableblock"><code>2100</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10100</code></p></td>
 <td class="tableblock halign-right valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>tabella_comandi_partita</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">[tabella verbi]</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>gruppo_file</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">=== Salvataggio e Caricamento</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-right valign-top"><p class="tableblock"><code>3000</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10110</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_carica_partita</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">==== carica_partita</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10120</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_salva_partita</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">==== salva_partita</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10200</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>gruppo_trascrizione</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">=== Trascrizione</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10210</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_trascrizione</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">==== trascrizione</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10220</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_trascrizione_on</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">==== trascrizione_on</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10230</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_trascrizione_off</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">==== trascrizione_off</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10300</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>gruppo_punteggio</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">=== Punteggio e Notifiche</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10310</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_vedi_punteggio</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">==== vedi_punteggio</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10320</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_notifica</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">==== notifica</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10330</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_notifica_on</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">==== notifica_on</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10330</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_notifica_on</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">==== notifica_on</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10340</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_notifica_off</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">==== notifica_off</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10400</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>gruppo_verbosity</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">=== Descrizioni Brevi e Lunghe</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10410</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_modalita_breve</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">==== modalità_breve</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10420</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_modalita_lunga</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">==== modalità_lunga</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10500</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>gruppo_misc_meta</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">=== Meta Verbi Vari</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10510</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_abbandona_partita</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">==== abbandona_partita</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10520</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_ricomincia_partita</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">==== ricomincia_partita</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10530</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_ringraziamenti</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">==== ringraziamenti</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>20000</code></p></td>
 <td class="tableblock halign-right valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>comandi_gioco</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">=== Comandi di Gioco</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">== Verbi di Gioco</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-right valign-top"><p class="tableblock"><code>3100</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>30000</code></p></td>
 <td class="tableblock halign-right valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>tabella_comandi_gioco</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">[tabella verbi]</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-right valign-top"><p class="tableblock"><code>4000</code></p></td>
-<td class="tableblock halign-right valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>comandi_affermazion</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">=== Comandi di Affermazioni o Domande</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-right valign-top"><p class="tableblock"><code>4100</code></p></td>
-<td class="tableblock halign-right valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>tabella_comandi_affermazioni</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">[tabella verbi]</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>comandi_comandi_domande</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">== Verbi di Domande</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-right valign-top"><p class="tableblock"><code>50000</code></p></td>
@@ -680,46 +800,16 @@ I frammenti delle regioni hanno un sottopeso; durante la fase di collatura del d
 </thead>
 <tbody>
 <tr>
-<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1000</code></p></td>
-<td class="tableblock halign-right valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>elenco_verbi</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">== Elenco dei Verbi Italiani</p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10000</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>tabella_vestiario_intro</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">== La Tabella del Vestiario</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-right valign-top"><p class="tableblock"><code>2000</code></p></td>
-<td class="tableblock halign-right valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>comandi_partita</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">=== Meta Comandi di Partita</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-right valign-top"><p class="tableblock"><code>2100</code></p></td>
-<td class="tableblock halign-right valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>tabella_comandi_partita</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">[tabella verbi]</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-right valign-top"><p class="tableblock"><code>3000</code></p></td>
-<td class="tableblock halign-right valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>comandi_gioco</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">=== Comandi di Gioco</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-right valign-top"><p class="tableblock"><code>3100</code></p></td>
-<td class="tableblock halign-right valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>tabella_comandi_gioco</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">[tabella verbi]</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-right valign-top"><p class="tableblock"><code>4000</code></p></td>
-<td class="tableblock halign-right valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>comandi_affermazion</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">=== Comandi di Affermazioni o Domande</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-right valign-top"><p class="tableblock"><code>4100</code></p></td>
-<td class="tableblock halign-right valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>tabella_comandi_affermazioni</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">[tabella verbi]</p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10100</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>tabella_vestiario</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">[tabella vestiario]</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-right valign-top"><p class="tableblock"><code>50000</code></p></td>
