--- a/alanlib_ita/lib_verbi.html
+++ b/alanlib_ita/lib_verbi.html
@@ -438,8 +438,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.11-Alpha,</span>
-<span id="revdate">2018-10-25</span>
+<span id="revnumber">versione 0.7.12-Alpha,</span>
+<span id="revdate">2018-10-31</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
 <div id="toc" class="toc2">
@@ -490,7 +490,46 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </li>
 </ul>
 </li>
-<li><a href="#_verbi_di_gioco">Verbi di Gioco</a></li>
+<li><a href="#_verbi_di_gioco">Verbi di Gioco</a>
+<ul class="sectlevel2">
+<li><a href="#_accensione_e_spegnimento">Accensione e Spegnimento</a>
+<ul class="sectlevel3">
+<li><a href="#_accendi">accendi</a></li>
+<li><a href="#_spegni">spegni</a></li>
+</ul>
+</li>
+<li><a href="#_apertura_e_chiusura">Apertura e Chiusura</a>
+<ul class="sectlevel3">
+<li><a href="#_apri">apri</a></li>
+<li><a href="#_apri_con">apri_con</a></li>
+<li><a href="#_blocca">blocca</a></li>
+<li><a href="#_blocca_con">blocca_con</a></li>
+<li><a href="#_chiudi">chiudi</a></li>
+<li><a href="#_chiudi_con">chiudi_con</a></li>
+</ul>
+</li>
+<li><a href="#_azioni_sensoriali">Azioni Sensoriali</a>
+<ul class="sectlevel3">
+<li><a href="#_ascolta0">ascolta0</a></li>
+<li><a href="#_ascolta">ascolta</a></li>
+<li><a href="#_tocca">tocca</a></li>
+<li><a href="#_tocca_con">tocca_con</a></li>
+</ul>
+</li>
+<li><a href="#_conversare">Conversare</a>
+<ul class="sectlevel3">
+<li><a href="#_chiedi">chiedi</a></li>
+<li><a href="#_dì">dì</a></li>
+<li><a href="#_dì_a">dì_a</a></li>
+<li><a href="#_domanda">domanda</a></li>
+<li><a href="#_parla">parla</a></li>
+<li><a href="#_parla_con">parla_con</a></li>
+<li><a href="#_racconta">racconta</a></li>
+<li><a href="#_rispondi">rispondi</a></li>
+</ul>
+</li>
+</ul>
+</li>
 <li><a href="#_verbi_di_domande">Verbi di Domande</a></li>
 <li><a href="#_todo">TODO</a></li>
 <li><a href="#_verbi_da_tradurre">Verbi da Tradurre</a>
@@ -1747,6 +1786,226 @@ gruppo specifico.</p>
 <div class="paragraph">
 <p>Comandi diretti al personaggio protagonista per interagire con l&#8217;avventura.</p>
 </div>
+<div class="sect2">
+<h3 id="_accensione_e_spegnimento"><a class="anchor" href="#_accensione_e_spegnimento"></a>Accensione e Spegnimento</h3>
+<div class="paragraph">
+<p>Questo gruppo include i verbi per l&#8217;accensione e lo spegnimento di fonti di
+luce e dispositivi:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>accendi</code></p>
+</li>
+<li>
+<p><code>spegni</code></p>
+</li>
+</ul>
+</div>
+<div class="sect3">
+<h4 id="_accendi"><a class="anchor" href="#_accendi"></a>accendi</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_spegni"><a class="anchor" href="#_spegni"></a>spegni</h4>
+
+</div>
+</div>
+<div class="sect2">
+<h3 id="_apertura_e_chiusura"><a class="anchor" href="#_apertura_e_chiusura"></a>Apertura e Chiusura</h3>
+<div class="paragraph">
+<p>Questo gruppo include i verbi per aprire, chiudere e bloccare:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>apri</code></p>
+</li>
+<li>
+<p><code>apri_con</code></p>
+</li>
+<li>
+<p><code>blocca</code></p>
+</li>
+<li>
+<p><code>blocca_con</code></p>
+</li>
+<li>
+<p><code>chiudi</code></p>
+</li>
+<li>
+<p><code>chiudi_con</code></p>
+</li>
+</ul>
+</div>
+<div class="sect3">
+<h4 id="_apri"><a class="anchor" href="#_apri"></a>apri</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_apri_con"><a class="anchor" href="#_apri_con"></a>apri_con</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_blocca"><a class="anchor" href="#_blocca"></a>blocca</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_blocca_con"><a class="anchor" href="#_blocca_con"></a>blocca_con</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_chiudi"><a class="anchor" href="#_chiudi"></a>chiudi</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_chiudi_con"><a class="anchor" href="#_chiudi_con"></a>chiudi_con</h4>
+
+</div>
+</div>
+<div class="sect2">
+<h3 id="_azioni_sensoriali"><a class="anchor" href="#_azioni_sensoriali"></a>Azioni Sensoriali</h3>
+<div class="paragraph">
+<p>Questo gruppo include i verbi per le azioni sensoriali:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>ascolta0</code></p>
+</li>
+<li>
+<p><code>ascolta</code></p>
+</li>
+<li>
+<p><code>tocca</code></p>
+</li>
+<li>
+<p><code>tocca_con</code></p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Verbi non tradotti appartenenti a questo gruppo:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>smell0</code></p>
+</li>
+<li>
+<p><code>smell</code></p>
+</li>
+<li>
+<p><code>taste</code> (oppure in altro gruppo, assieme a <code>mangia</code>?)</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Il verbo guarda andrebbe in questo gruppo o con <code>esamina</code>?</p>
+</div>
+<div class="sect3">
+<h4 id="_ascolta0"><a class="anchor" href="#_ascolta0"></a>ascolta0</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_ascolta"><a class="anchor" href="#_ascolta"></a>ascolta</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_tocca"><a class="anchor" href="#_tocca"></a>tocca</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_tocca_con"><a class="anchor" href="#_tocca_con"></a>tocca_con</h4>
+
+</div>
+</div>
+<div class="sect2">
+<h3 id="_conversare"><a class="anchor" href="#_conversare"></a>Conversare</h3>
+<div class="paragraph">
+<p>Questo gruppo include i verbi per conversare:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>chiedi</code> (da spostare in altro gruppo!)</p>
+</li>
+<li>
+<p><code>chiedi_errore</code> (<em>idem</em>)</p>
+</li>
+<li>
+<p><code>domanda</code></p>
+</li>
+<li>
+<p><code>dì</code></p>
+</li>
+<li>
+<p><code>dì_a</code></p>
+</li>
+<li>
+<p><code>parla</code></p>
+</li>
+<li>
+<p><code>parla_a</code></p>
+</li>
+<li>
+<p><code>racconta</code></p>
+</li>
+<li>
+<p><code>rispondi</code></p>
+</li>
+</ul>
+</div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Nota"></i>
+</td>
+<td class="content">
+<div class="paragraph">
+<p>I verbo <code>chiedi</code> e <code>chiedi_errore</code> andrebbero spostati in un altro gruppo dato
+che non riguardano la conversazione ma il domandare un oggetto a un altro
+PNG (chiedere per avere, anziché per sapere). Per ora li lascio qui, finché
+non decido in quale gruppo spostarli.</p>
+</div>
+</td>
+</tr>
+</table>
+</div>
+<div class="sect3">
+<h4 id="_chiedi"><a class="anchor" href="#_chiedi"></a>chiedi</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_dì"><a class="anchor" href="#_dì"></a>dì</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_dì_a"><a class="anchor" href="#_dì_a"></a>dì_a</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_domanda"><a class="anchor" href="#_domanda"></a>domanda</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_parla"><a class="anchor" href="#_parla"></a>parla</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_parla_con"><a class="anchor" href="#_parla_con"></a>parla_con</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_racconta"><a class="anchor" href="#_racconta"></a>racconta</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_rispondi"><a class="anchor" href="#_rispondi"></a>rispondi</h4>
+
+</div>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -2294,6 +2553,66 @@ italiano del modulo dei verbi.</p>
 <li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>ringraziamenti</code>.</p>
 </li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>accendi</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>spegni</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>apri</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>apri_con</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>blocca</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>blocca_con</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>chiudi</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>chiudi_con</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>ascolta0</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>ascolta</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>tocca</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>tocca_con</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>chiedi</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>dì</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>dì_a</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>domanda</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>parla</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>parla_con</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>racconta</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>rispondi</code>.</p>
+</li>
 </ul>
 </div>
 </div>
@@ -2302,7 +2621,7 @@ italiano del modulo dei verbi.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.11-Alpha<br>
+Versione 0.7.12-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
